Adapt new test to JDK11.